--- a/src/SunglassHut_V2.mxml
+++ b/src/SunglassHut_V2.mxml
@@ -127,7 +127,7 @@
 
         protected function onApplicationComplete(e:Event = null):void {
 
-
+            this.stage.setAspectRatio(StageAspectRatio.LANDSCAPE);
             NativeApplication.nativeApplication.addEventListener(Event.DEACTIVATE, onDeactivate);
             NativeApplication.nativeApplication.addEventListener(Event.EXITING, onExit)
 
