--- a/src/views/ApplicationType.mxml
+++ b/src/views/ApplicationType.mxml
@@ -117,7 +117,7 @@
 	</fx:Declarations>
 	
 	
-	<s:Scroller width="100%" height="100%">
+	<s:Scroller width="100%" height="100%" horizontalScrollPolicy="off" >
 
 			
 			
@@ -143,14 +143,15 @@
 					<s:FormItem width="365" label="Facebook appID:" >
 						<s:TextInput id="facebookAPI_ID" width="400" color="0x000000" softKeyboardType="number"  fontFamily="Arial"/>
 					</s:FormItem>
-
+                    <s:HGroup verticalAlign="middle">
+                        <s:Button label="Cancel" click="cancel(event)"/>
+                        <s:Spacer  width="50" />
+                        <s:Button id="submitButton" label="Submit" click="submit(event)" />
+                        <s:Spacer  width="100" />
+                        <s:Button label="Force print" id="forcePrint" click="forcePrint_clickHandler(event)" />
+                    </s:HGroup>
 				</s:Form>
-				<s:HGroup verticalAlign="middle">
-					<s:Button x="259" y="591" label="Cancel" click="cancel(event)"/>
-					<s:Spacer y="8" width="568" height="24"/>
-					<s:Button id="submitButton" x="909" y="591" label="Submit" click="submit(event)" />
-					<s:Button label="Force print" id="forcePrint" click="forcePrint_clickHandler(event)" />
-				</s:HGroup>
+
 
 			<s:DataGrid height="400" dataProvider="{uploadDP}" width="700" />
 			</s:VGroup>
